infra/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - drive
  rules:
  - host: "drive"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server-svc
            port:
              name: http
